fix 3.0