@@ -15,8 +15,8 @@ import java.net.URLDecoder;
 import java.nio.charset.StandardCharsets;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
+import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequiredArgsConstructor
@@ -47,7 +47,7 @@ public class StatsController {
         log.info("Raw params: start='{}', end='{}', uris={}, unique={}", start, end, uris, unique);
 
         try {
-            // Полное URL декодирование
+            // Декодирование URL
             start = URLDecoder.decode(start, StandardCharsets.UTF_8.toString());
             end = URLDecoder.decode(end, StandardCharsets.UTF_8.toString());
 
@@ -60,19 +60,17 @@ public class StatsController {
 
             if (startDate.isAfter(endDate)) {
                 log.error("Invalid date range: start {} is after end {}", startDate, endDate);
-                throw new IllegalArgumentException("Неверный диапазон дат: start не может быть после end");
+                return ResponseEntity.badRequest().body(Collections.emptyList());
             }
 
             List<ViewStatsDto> stats = statServiceImpl.getStats(startDate, endDate, uris, unique);
 
             log.info("Returning {} stats records", stats.size());
-            stats.forEach(s -> log.info("  -> {}: {} hits", s.getUri(), s.getHits()));
-
             return ResponseEntity.ok(stats);
 
         } catch (Exception e) {
             log.error("Error processing stats request: {}", e.getMessage(), e);
-            return ResponseEntity.badRequest().build();
+            return ResponseEntity.ok(Collections.emptyList());
         }
     }
 
@@ -87,7 +85,7 @@ public class StatsController {
         log.info("Params: start='{}', end='{}', uris={}, unique={}", start, end, uris, unique);
 
         try {
-            // Полное URL декодирование
+            // Декодирование URL
             start = URLDecoder.decode(start, StandardCharsets.UTF_8.toString());
             end = URLDecoder.decode(end, StandardCharsets.UTF_8.toString());
 
@@ -100,33 +98,20 @@ public class StatsController {
 
             if (startDate.isAfter(endDate)) {
                 log.error("Invalid date range: start {} is after end {}", startDate, endDate);
-                throw new IllegalArgumentException("Неверный диапазон дат: start не может быть после end");
+                return ResponseEntity.badRequest().body(Collections.emptyList());
             }
 
-            List<ViewStatsDto> stats;
-            if (uris == null || uris.isEmpty()) {
-                // Получаем всю статистику
-                stats = statServiceImpl.getStats(startDate, endDate, null, unique);
-                // Фильтруем только события (URI начинаются с /events)
-                stats = stats.stream()
-                        .filter(stat -> stat.getUri() != null && stat.getUri().startsWith("/events"))
-                        .collect(Collectors.toList());
-            } else {
-                // Получаем только указанные события
-                stats = statServiceImpl.getStats(startDate, endDate, uris, unique);
-            }
+            List<ViewStatsDto> stats = statServiceImpl.getStats(startDate, endDate, uris, unique);
 
             // Сортировка по убыванию hits
             stats.sort((a, b) -> Long.compare(b.getHits(), a.getHits()));
 
             log.info("Returning {} event stats records", stats.size());
-            stats.forEach(s -> log.debug("  -> {}: {} hits", s.getUri(), s.getHits()));
-
             return ResponseEntity.ok(stats);
 
         } catch (Exception e) {
             log.error("Error processing /events stats: {}", e.getMessage(), e);
-            return ResponseEntity.badRequest().build();
+            return ResponseEntity.ok(Collections.emptyList());
         }
     }
 
@@ -141,7 +126,7 @@ public class StatsController {
         log.info("Params: start='{}', end='{}', unique={}", start, end, unique);
 
         try {
-            // Полное URL декодирование
+            // Декодирование URL
             start = URLDecoder.decode(start, StandardCharsets.UTF_8.toString());
             end = URLDecoder.decode(end, StandardCharsets.UTF_8.toString());
 
@@ -154,7 +139,7 @@ public class StatsController {
 
             if (startDate.isAfter(endDate)) {
                 log.error("Invalid date range: start {} is after end {}", startDate, endDate);
-                throw new IllegalArgumentException("Неверный диапазон дат: start не может быть после end");
+                return ResponseEntity.badRequest().body(Collections.emptyList());
             }
 
             // Создаем URI для конкретного события
@@ -163,32 +148,12 @@ public class StatsController {
 
             List<ViewStatsDto> stats = statServiceImpl.getStats(startDate, endDate, uris, unique);
 
-            // Если статистики нет, возвращаем объект с 0 хитов
-            if (stats.isEmpty()) {
-                ViewStatsDto emptyStat = ViewStatsDto.builder()
-                        .app("ewm-main")
-                        .uri(eventUri)
-                        .hits(0L)
-                        .build();
-                stats = List.of(emptyStat);
-                log.info("No stats found for event {}, returning zero hits", id);
-            } else {
-                log.info("Found stats for event {}: {} hits", id, stats.get(0).getHits());
-            }
-
+            log.info("Found {} stats records for event {}", stats.size(), id);
             return ResponseEntity.ok(stats);
 
         } catch (Exception e) {
             log.error("Error processing /events/{} stats: {}", id, e.getMessage(), e);
-
-            // Возвращаем пустой объект с 0 хитов при ошибке
-            String eventUri = "/events/" + id;
-            ViewStatsDto errorStat = ViewStatsDto.builder()
-                    .app("ewm-main")
-                    .uri(eventUri)
-                    .hits(0L)
-                    .build();
-            return ResponseEntity.ok(List.of(errorStat));
+            return ResponseEntity.ok(Collections.emptyList());
         }
     }
 }
